--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="container">
-            <h1>Hello World!</h1>
-            <h3>My name is Jeremy. This is my webpage.</h3>
+            <h1>Hello Everyone!</h1>
+            <h3>My name is I-Yun. This is my webpage.</h3>
         </div>
     </body>
 </html>
