--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <h1>Hello Everyone!</h1>
-            <h3>My name is I-Yun. This is my webpage.</h3>
+            <h3>My name is I-Yun. This is my webpage. Pretty Cool, right?</h3>
         </div>
     </body>
 </html>
